// ==========================================
// DBML Source Script - Sports Ticket Platform (Updated)
// ==========================================

Enum user_role {
  audience
  support
}

Enum reservation_status {
  pending
  paid
  cancelled
}

Enum payment_status {
  successful
  failed
  pending
}

Enum sport_type_enum {
  football
  volleyball
  basketball
}

Table users {
  user_id integer [pk, increment]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  phone_number varchar(15) [unique, not null]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  role user_role [default: 'audience']
  city varchar(50) [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table tickets {
  ticket_id integer [pk, increment]
  home_team varchar(100) [not null]
  away_team varchar(100) [not null]
  sport_type sport_type_enum [not null]
  ticket_tier varchar(50) [not null]
  organizer varchar(100) [not null]
  venue_name varchar(100) [not null]
  city varchar(50) [not null]
  match_date timestamp [not null]
  price numeric(10, 2) [not null, note: 'Check price >= 0']
  remaining_capacity integer [not null, note: 'Check remaining_capacity >= 0']
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table football_details {
  ticket_id integer [pk, ref: - tickets.ticket_id]
  league_name varchar(100) [not null]
  stadium_name varchar(100) [not null]
  stand_section varchar(50) [not null]
  row_number integer [not null]
  seat_number integer [not null]
  ticket_type varchar(50) [not null]
  amenities text
}

Table volleyball_details {
  ticket_id integer [pk, ref: - tickets.ticket_id]
  league_name varchar(100) [not null]
  hall_name varchar(100) [not null]
  seat_section varchar(50) [not null]
  row_number integer [not null]
  seat_number integer [not null]
  ticket_tier varchar(50) [not null]
  amenities text
}

Table basketball_details {
  ticket_id integer [pk, ref: - tickets.ticket_id]
  league_name varchar(100) [not null]
  hall_name varchar(100) [not null]
  seat_section varchar(50) [not null]
  row_number integer [not null]
  seat_number integer [not null]
  ticket_tier varchar(50) [not null]
  amenities text
}

Table reservations {
  reservation_id integer [pk, increment]
  user_id integer [not null, ref: > users.user_id]
  ticket_id integer [not null, ref: > tickets.ticket_id]
  status reservation_status [default: 'pending']
  reserved_at timestamp [default: `CURRENT_TIMESTAMP`]
  expires_at timestamp [not null, note: 'Check reserved_at < expires_at']
  cancelled_by_support_id integer [ref: > users.user_id, note: 'Track which admin cancelled it']
}

Table payments {
  payment_id integer [pk, increment]
  reservation_id integer [unique, not null, ref: - reservations.reservation_id]
  user_id integer [not null, ref: > users.user_id]
  amount numeric(10, 2) [not null, note: 'Check amount >= 0']
  status payment_status [default: 'pending']
  payment_method varchar(50) [default: 'online_gateway']
  paid_at timestamp
}

Table reports {
  report_id integer [pk, increment]
  user_id integer [not null, ref: > users.user_id]
  ticket_id integer [ref: > tickets.ticket_id, note: 'Nullable, report can refer to ticket or reservation']
  reservation_id integer [ref: > reservations.reservation_id, note: 'Nullable, report can refer to ticket or reservation']
  category varchar(100) [not null]
  report_text text [not null]
  status varchar(50) [default: 'under_review']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}